--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
 [✓] • strlen
-[❌] • strchr
-[❌] • memset
-[❌] • memcpy
+[✓] • strchr
+[✓] • memset
+[✓] • memcpy
 [✓] • strcmp
-[❌] • memmove
-[❌] • strncmp
-[❌] • strcasecmp
-[❌] • rindex
-[❌] • strstr
-[❌] • strpbrk
-[❌] • strcspn
+[✓] • memmove
+[✓] • strncmp
+[✓] • strcasecmp
+[✓] • rindex
+[✓] • strstr
+[✓] • strpbrk
+[✓] • strcspn
